--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.3.1'
 
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+	implementation 'com.google.code.gson:gson'
 }
 
 tasks.named('test') {
